feat: config crramirez--casciian